--- a/Resources/css/base.css
+++ b/Resources/css/base.css
@@ -31,6 +31,7 @@ main {
     flex-direction: column;
     margin-top: 2rem;
     row-gap: 2rem;
+    margin-bottom: 2rem;
 }
 
 a {
